force-app/main/default/objects/AsyncJob__c/AsyncJob__c.object-meta.xml
<CustomObject>
    <label>Async Job</label>
    <nameField>
        <displayFormat>AJ-{000000}</displayFormat>
        <label>Async Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>