force-app/main/default/objects/AsyncJob__c/fields/AllowRetry__c.field-meta.xml
<CustomField>
    <fullName>AllowRetry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Retry</label>
    <type>Checkbox</type>
</CustomField>