force-app/main/default/objects/AsyncJob__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AllowRetry__c</columns>
    <columns>ApexClassName__c</columns>
    <columns>BatchSize__c</columns>
    <columns>JobType__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>RetryCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>